RESOLVED FIXED38788
CSS3: We fail 'border radius sum of radii' test
https://bugs.webkit.org/show_bug.cgi?id=38788
Summary CSS3: We fail 'border radius sum of radii' test
James Robinson
Reported 2010-05-07 18:59:35 PDT
We fail the test case in the given URL. It looks like we let a background element bleed through somehow. This bug is probably a dupe but I'm not sure what the underlying issue is.
Attachments
Patch (7.42 KB, patch)
2011-05-18 19:26 PDT, David Barr
no flags
Patch (8.20 KB, patch)
2011-05-18 21:39 PDT, David Barr
no flags
Simon Fraser (smfr)
Comment 1 2011-04-17 21:28:58 PDT
Maybe the negative value in border radius should cause us to ignore that rule, and we're not?
David Barr
Comment 2 2011-05-18 18:57:25 PDT
There is no explicit mention of non-negativity of border radii in the spec: http://www.w3.org/TR/css3-background/#the-border-radius The interpretation held in Gecko and IE of strict non-negativity seems reasonable given the lack of description of how negative radii ought to be rendered. A quick test of making this change in the parser results in a pass. I'll upload a patch shortly. There also seems to be a regression on part of this test case since this bug was filed - I'll look into that after resolving the issue at hand.
David Barr
Comment 3 2011-05-18 19:26:05 PDT
Simon Fraser (smfr)
Comment 4 2011-05-18 20:25:58 PDT
Comment on attachment 94032 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=94032&action=review > LayoutTests/fast/css/border-radius-non-negative.html:15 > + border-radius: 30px -150px 30px 30px; Would be nice to also test a combination of illegal border-top-left-radius with legal border-top-right-radius (for example).
David Barr
Comment 5 2011-05-18 21:39:26 PDT
WebKit Commit Bot
Comment 6 2011-05-19 02:46:06 PDT
Comment on attachment 94041 [details] Patch Clearing flags on attachment: 94041 Committed r86830: <http://trac.webkit.org/changeset/86830>
WebKit Commit Bot
Comment 7 2011-05-19 02:46:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.