2011-05-19  David Barr  <davidbarr@chromium.org>

Reviewed by Simon Fraser.

        CSS3: We fail 'border radius sum of radii' test
        https://bugs.webkit.org/show_bug.cgi?id=38788

        * fast/css/border-radius-non-negative-expected.txt: Added.
        * fast/css/border-radius-non-negative.html: Added.
        * platform/mac/fast/css/border-radius-non-negative-expected.png: Added.
2011-05-19  David Barr  <davidbarr@chromium.org>

        Reviewed by Simon Fraser.

        CSS3: We fail 'border radius sum of radii' test
        https://bugs.webkit.org/show_bug.cgi?id=38788

        Ignore border-radius properties with negative values.

        Test: fast/css/border-radius-non-negative.html

        * WebCore.xcodeproj/project.pbxproj:
        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseValue):
        (WebCore::CSSParser::parseBorderRadius):

Canonical link: https://commits.webkit.org/76472@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86830 268f45cc-cd09-0410-ab3c-d52691b4dbfc